--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,67 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.expan .btn-collapse {
+    @apply transform scale-110 -rotate-180 !important;
+}
+.expan .nestable-list {
+    @apply h-0 !important;
+} 
+.nestable-item .nestable-list {
+    @apply relative h-full overflow-hidden;
+} 
+
+.nestable, .nestable-item {
+    @apply relative;
+  }
+  .nestable-item + .nestable-item .nestable-item-content {
+    @apply border-t-0;
+  }
+  .nestable-item .nestable-item-content {
+    @apply border border-gray-150 px-4 py-3;
+  }
+  .nestable-item .nestable-list .nestable-item .nestable-item-content .drag-title, 
+   .nestable-item .nestable-list .nestable-item .nestable-item-content .drag-required,
+   .nestable-item .nestable-list .nestable-item .nestable-item-content .drag-drag-description {
+    @apply text-sm !important;
+  }
+  .nestable-item .nestable-list .nestable-item .nestable-item-content {
+    @apply border border-t-0 border-gray-150 px-4 py-2 !important;
+  }
+  .nestable-handle {
+    @apply flex items-center;
+  }
+  .nestable-item .nestable-list
+  {
+    @apply ml-4;
+  }
+  .nestable-item.is-dragging .nestable-list {
+    @apply pointer-events-none;
+  }
+  .nestable-item.is-dragging * {
+    @apply opacity-0;
+    filter: alpha(opacity=0);
+  }
+  .nestable-item.is-dragging:before {
+    @apply absolute top-0 left-0 right-0 bottom-0 bg-blue-550 bg-opacity-25 border border-blue-550 border-dashed;
+    content: ' ';
+  }
+  .nestable-drag-layer {
+    @apply fixed top-0 left-0 right-0 bottom-0 h-full flex justify-between select-none pointer-events-none;
+    z-index: 1000;
+
+  }
+  .nestable-drag-layer > .nestable-list {
+    @apply absolute top-0 left-0 p-0 bg-white border border-t-0 border-gray-150 px-4 py-2 !important;
+    box-shadow: 0px 3px 16px rgba(0, 102, 255, 0.7)
+  }
+  .nestable-drag-layer > .nestable-list {
+      @apply mt-0 !important;
+  }
+  .nestable [draggable="true"] {
+    @apply cursor-move;
+  }
+  .nestable:nth-child(2) .nestable-drag-layer {
+    @apply hidden !important;
+   }
